{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 27,
  "lineage": "9f7aaede-5f1f-37d4-b24d-677447131c55",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031328516092:internet-gateway/igw-02c459b935eb52e1e",
            "id": "igw-02c459b935eb52e1e",
            "owner_id": "031328516092",
            "tags": {
              "Name": "ediel-vpc"
            },
            "tags_all": {
              "Name": "ediel-vpc"
            },
            "vpc_id": "vpc-0f48bafe1cc56eba4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02c459b935eb52e1e",
            "id": "r-rtb-0aca90ff3b6b2f5df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aca90ff3b6b2f5df",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031328516092:route-table/rtb-0aca90ff3b6b2f5df",
            "id": "rtb-0aca90ff3b6b2f5df",
            "owner_id": "031328516092",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ediel-vpc-public"
            },
            "tags_all": {
              "Name": "ediel-vpc-public"
            },
            "vpc_id": "vpc-0f48bafe1cc56eba4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfc2d0013f496bdb",
            "route_table_id": "rtb-0aca90ff3b6b2f5df",
            "subnet_id": "subnet-0f2853a25bf882347"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028d3fb41d7387b7e",
            "route_table_id": "rtb-0aca90ff3b6b2f5df",
            "subnet_id": "subnet-05b022253220f9b8d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031328516092:subnet/subnet-0f2853a25bf882347",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0f2853a25bf882347",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031328516092",
            "tags": {
              "Name": "ediel-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "ediel-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0f48bafe1cc56eba4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031328516092:subnet/subnet-05b022253220f9b8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-05b022253220f9b8d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031328516092",
            "tags": {
              "Name": "ediel-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "ediel-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0f48bafe1cc56eba4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031328516092:vpc/vpc-0f48bafe1cc56eba4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e32b7683b007afea",
            "default_route_table_id": "rtb-0192c9ed1e7cf2238",
            "default_security_group_id": "sg-0df3fd512f474de35",
            "dhcp_options_id": "dopt-02130064662afd455",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f48bafe1cc56eba4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0192c9ed1e7cf2238",
            "owner_id": "031328516092",
            "tags": {
              "Name": "ediel-vpc"
            },
            "tags_all": {
              "Name": "ediel-vpc"
            }
          }
        }
      ]
    }
  ]
}